# miles-deep

./: .gitignore  CMakeLists.txt  Libraries.cmake  cut_movie.cpp  cut_movie.hpp  miles-deep.cpp  util.cpp  util.hpp
classes/: Classifier.cpp  Classifier.h  Cutter.cpp  Cutter.hpp
